--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,15 @@
 
 .img-hover-zoom {
   overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+  width: 70%;
 }
 
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
-  transition: transform 0.5s ease;
+  transition: transform 2s ease;
 }
 
 /* [3] Finally, transforming the image when container gets hovered */
 .img-hover-zoom:hover img {
-  transform: scale(1);
+  transform: scale(1.1);
 }
