--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,49 @@
+body {
+  overscroll-behavior: none;
+  -ms-overflow-style: none;
+  font-size: 16px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.scroll-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  will-change: transform;
+}
+.ghost {
+  width: 100vw;
+}
+
+.thumbnails-container {
+  position: relative;
+  height: 100vh;
+  width: max-content;
+  display: flex;
+  align-items: center;
+  padding: 0px 160px;
+  background-color: black;
+  border: 40px solid yellowGreen;
+}
+.thumbnails {
+  position: relative;
+  display: flex;
+  border: 20px solid yellow;
+}
+.thumbnails:not(:last-child) {
+  margin-right: 45px;
+}
+.thumbnail {
+  height: 40vh;
+  width: 700px;
+  background-color: royalblue;
+  border: 15px solid magenta;
+}
+
+/* /////////////// */
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -45,11 +91,16 @@
 .img-hover-zoom {
   overflow: hidden; /* [1.2] Hide the overflowing of child elements */
   width: 70%;
+  width: auto;
+  height: auto;
 }
 
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
-  transition: transform 1s ease;
+  transition: transform 0.8s ease;
+  margin-bottom: -10px;
+  width: 100%;
+  height: 100%;
 }
 
 /* [3] Finally, transforming the image when container gets hovered */
