finish temporarily LS

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+/* *,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+
 body {
   overscroll-behavior: none;
   -ms-overflow-style: none;
@@ -24,13 +36,13 @@ body {
   display: flex;
   align-items: center;
   padding: 0px 160px;
-  background-color: black;
-  border: 40px solid yellowGreen;
+  /* background-color: black;
+  border: 40px solid yellowGreen; */
 }
 .thumbnails {
   position: relative;
   display: flex;
-  border: 20px solid yellow;
+  /* border: 20px solid yellow; */
 }
 .thumbnails:not(:last-child) {
   margin-right: 45px;
@@ -38,8 +50,8 @@ body {
 .thumbnail {
   height: 40vh;
   width: 700px;
-  background-color: royalblue;
-  border: 15px solid magenta;
+  /* background-color: royalblue;
+  border: 15px solid magenta; */
 }
 
 /* /////////////// */
