--- a/src/App.css
+++ b/src/App.css
@@ -197,3 +197,63 @@ body {
   /* position: absolute; */
   width: 34%;
 }
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
+}
+
+/* //////////////////////////// */
+
+.container {
+  width: 1280px;
+  min-width: 1280px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  padding: 0 48px;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.hamburger-menu {
+  display: none;
+  z-index: 9;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+.menu-secondary-background-color {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #61dafb;
+  z-index: 1;
+}
+.menu-layer {
+  position: relative;
+  background: red;
+  height: 100%;
+  overflow: hidden;
+}
