--- a/src/App.css
+++ b/src/App.css
@@ -284,11 +284,11 @@ body {
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: #4f5813;
+  background-color: #431e57;
 }
 
 .menu-secondary-background-color {
-  background: #7a8821;
+  background: #2f123d;
   top: 0;
   left: 0;
   right: 0;
@@ -300,7 +300,7 @@ body {
 }
 .menu-layer {
   position: relative;
-  background: #191a15;
+  background: #1d0d25;
   height: 100%;
   overflow: hidden;
 }
