--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ body {
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
   transition: transform 0.8s ease;
-  margin-bottom: -10px;
+  /* margin-bottom: -10px; */
   width: 100%;
   height: 100%;
 }
@@ -378,3 +378,38 @@ body {
     background-position: 0% 0%;
   }
 }
+
+/* /////////// GALLERY ///////////// */
+.image-block {
+  position: absolute;
+  transform-origin: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .image-1 {
+  width: 400px;
+  left: 16%;
+  bottom: 14%;
+}
+.image-3 {
+  width: 300px;
+  right: 12%;
+  top: 8%;
+}
+.image-4 {
+  max-width: 400px;
+  width: 40%;
+  right: 20%;
+  bottom: 10%;
+}
+.image-5 {
+  width: 280px;
+  left: 14%;
+  top: 12%;
+}
+.image-6 {
+  width: 28%;
+  left: 24%;
+  top: 20%;
+} */
