--- a/src/App.css
+++ b/src/App.css
@@ -380,6 +380,46 @@ body {
 }
 
 /* /////////// GALLERY ///////////// */
+
+.image-1 {
+  width: 30vw;
+  left: 16%;
+  bottom: 10%;
+}
+.image-2 {
+  width: 20vw;
+  right: 12%;
+  top: 12%;
+}
+.image-5 {
+  width: 30vw;
+  right: 20%;
+  bottom: 6%;
+}
+.image-8 {
+  width: 20vw;
+  left: 6%;
+  top: 16%;
+}
+.image-9 {
+  width: 20vw;
+  left: 14%;
+  top: 38%;
+}
+.image-10 {
+  width: 30vw;
+  left: 36%;
+  top: 20%;
+}
+
+.image-1:hover,
+.image-2:hover,
+.image-5:hover,
+.image-8:hover,
+.image-9:hover,
+.image-10:hover {
+  z-index: 1;
+}
 .image-block {
   position: absolute;
   transform-origin: center;
@@ -387,29 +427,3 @@ body {
   align-items: center;
   justify-content: center;
 }
-/* .image-1 {
-  width: 400px;
-  left: 16%;
-  bottom: 14%;
-}
-.image-3 {
-  width: 300px;
-  right: 12%;
-  top: 8%;
-}
-.image-4 {
-  max-width: 400px;
-  width: 40%;
-  right: 20%;
-  bottom: 10%;
-}
-.image-5 {
-  width: 280px;
-  left: 14%;
-  top: 12%;
-}
-.image-6 {
-  width: 28%;
-  left: 24%;
-  top: 20%;
-} */
