--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ body {
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
   transition: transform 0.8s ease;
-  /* margin-bottom: -10px; */
+  margin-bottom: 0;
   width: 100%;
   height: 100%;
 }
